Paths fixes
