# src/routes/users.routes.js
@@ -1,0 +1,8 @@
+const express = require("express");
+const { getUsers } = require("../controllers/users.controller");
+
+const router = express.Router();
+
+router.post("/", getUsers);
+
+module.exports = router;
